--- a/Proyecto2/index.html
+++ b/Proyecto2/index.html
@@ -51,3 +51,6 @@
 <p>Barranquilla es sede de una de las festividades folclóricas y culturales más importantes de Colombia, el carnaval de Barranquilla, declarado Patrimonio Cultural de la Nación por el Congreso de Colombia en 2001 y Patrimonio Oral e Inmaterial de la Humanidad por la UNESCO en 2003.</p>
 </header>
 <main>
+    <h2>Ubicacion</h2>
+    <p>Barranquilla está localizada en el vértice nororiental del departamento del Atlántico, sobre la orilla occidental del río Magdalena, a 7,5 km de su desembocadura en el mar Caribe. Tiene una extensión de 154 km², equivalentes al 4,5 % de la superficie del departamento del Atlántico. Las coordenadas geográficas se establecen tomando como referencia el punto cero de la ciudad ubicado en la plaza de la Paz.</p>
+    <h2>Clima</h2>
