--- a/Proyecto2/index.html
+++ b/Proyecto2/index.html
@@ -54,3 +54,6 @@
     <h2>Ubicacion</h2>
     <p>Barranquilla está localizada en el vértice nororiental del departamento del Atlántico, sobre la orilla occidental del río Magdalena, a 7,5 km de su desembocadura en el mar Caribe. Tiene una extensión de 154 km², equivalentes al 4,5 % de la superficie del departamento del Atlántico. Las coordenadas geográficas se establecen tomando como referencia el punto cero de la ciudad ubicado en la plaza de la Paz.</p>
     <h2>Clima</h2>
+    <p>El clima de Barranquilla es de tipo tropical seco o xeromegaterno tropical, es decir, correspondiente a una vegetación propia de la sequedad y bajo altas temperaturas. Conforme a la clasificación climática de Köppen, le corresponde un clima Aw o tropical de sabana.
+        La temperatura promedio es de 26,2 °C. De noviembre hasta principios de abril, coincidiendo con el invierno boreal, soplan los vientos alisios del nororiente, mitigando en parte el intenso calor. Hacia fines de junio soplan los alisios del suroriente, produciendo el veranillo de San Juan. Es por esto que en esa época se vive un ambiente parecido a diciembre. 
+        </p>
